@@ -1,6 +1,7 @@
 # t001.test                                             -*- shell-script -*-
 
 . ./common
+split_std_out_err
 
 w=$wd/x
 v=$wd/x,v
